chore: remove redundant layout elements

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitItemControl.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitItemControl.axaml
@@ -27,6 +27,7 @@
             <!-- Model Name -->
             <TextBlock Text="{Binding Model}" 
                        Classes="bodySmall"
+                       Foreground="{DynamicResource TextLightBrush}"
                        TextAlignment="Center"
                        TextWrapping="Wrap"
                        MaxLines="2"
