chore: use static resources in controls

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/AvailableUnitsTable.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/AvailableUnitsTable.axaml
@@ -32,14 +32,14 @@
             
             <!-- Units Table -->
             <Border Grid.Row="2"
-                    BorderBrush="{DynamicResource PrimaryBrush}"
+                    BorderBrush="{StaticResource PrimaryBrush}"
                     BorderThickness="1"
                     CornerRadius="4">
                 <Grid RowDefinitions="Auto,*">
                     <!-- Table Header -->
                     <Grid Grid.Row="0"
                           ColumnDefinitions="2*,2*,*"
-                          Background="{DynamicResource PrimaryBrush}"
+                          Background="{StaticResource PrimaryBrush}"
                           Height="30">
                         <!-- Chassis -->
                         <Button Grid.Column="0"
