--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Styles/Panels.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Styles/Panels.axaml
@@ -87,7 +87,7 @@
     </Style>
     
     <Style Selector="Border.statusTag > TextBlock">
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Foreground" Value="{StaticResource HighlightLightBrush}"/>
         <Setter Property="FontSize" Value="12"/>
         <Setter Property="FontWeight" Value="Bold"/>
     </Style>
