--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/Fragments/PlayersFragment.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/Fragments/PlayersFragment.axaml
@@ -90,7 +90,7 @@
                                                         <Button Grid.Row="1"
                                                                 Content="Remove"
                                                                 Command="{Binding $parent[ItemsControl].((wrappers:PlayerViewModel)DataContext).RemoveUnitCommand}"
-                                                                CommandParameter="{Binding}"
+                                                                CommandParameter="{Binding Id}"
                                                                 IsVisible="{Binding $parent[ItemsControl].((wrappers:PlayerViewModel)DataContext).CanRemoveUnit}"
                                                                 Classes="secondary"
                                                                 FontSize="10"
